# GameDevTv21

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/src/: Credits.h  EndGame.h  Enemy.cpp  Enemy.h  GameScene.h  HowTo.h  ImProc.h  Improc.cpp  MainMenu.h  Map.cpp  Map.h  MapGen.cpp  MapGen.h  Resources.cpp  Resources.h  Scenes.h  Tower.cpp  Tower.h  Types.h  main.cpp
resource/: Resource Layout (README).txt  Resources for later.txt
resource/Tile Importer/: CMakeLists.txt  Instuctions (READ ME).txt  Main.cpp  Tile Importer.kdev4
resource/Tile Importer/.kdev4/: Tile Importer.kdev4
resource/assets/02Towers/: 01tower.txt  02tower.txt  03tower.txt  04tower.txt  05tower.txt  07tower.txt  08tower.txt  09tower.txt  10tower.txt
resource/assets/03Enemies/: 01enemy.txt  02enemy.txt  03enemy.txt  04enemy.txt  05plane.txt  06plane.txt  07tank.txt  08tank.txt
resource/assets/04TowersData/: AAA.txt  Beam.txt  Beam2.txt  BulletTowerL1.txt  BulletTowerL2.txt  BulletTowerL3.txt  Carpet.txt  Deathray.txt  Flak.txt  Flak2.txt  Hellfire.txt  LaserTowerL1.txt  LaserTowerL2.txt  LaserTowerL3.txt  Machinegun.txt  MissileTowerL1.txt  MissileTowerL2.txt  Mortar2.txt  Mortar3.txt  MortarTowerL1.txt  Nuke.txt  Pulsar.txt  PulseLaser.txt  PulseLaser2.txt  RocketTowerL1.txt  RocketTowerL2.txt  RocketTowerL3.txt  Sniper.txt  Stingers.txt  Swam.txt  Swarm.txt
resource/assets/05EnemiesData/: Cycler.txt  EnemyFlyerL1.txt  EnemyFlyerL2.txt  EnemyFlyerL3.txt  EnemyInfantryL1.txt  EnemyInfantryL2.txt  EnemyInfantryL3.txt  EnemyInfantryL4.txt  EnemyTankL1.txt  EnemyTankL2.txt  EnemyTankL3.txt  EnemyTankL4.txt  EnemyTankL5.txt  EnemyTankL6.txt  Fortress.txt  Mech1.txt  Mech2.txt  Rusher.txt  Spy.txt
resource/assets/Towers/: tower6.txt
resource/sprites_-_lasers_bullets/: from.txt
